--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
+    "dev": "nodemon app.js",
     "start": "nodemon app.js"
   },
   "author": "",
@@ -16,6 +17,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
