--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "uuid": "^11.1.0",
+    "waypoints": "^4.0.1"
   }
 }
